--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,5 +39,10 @@ jobs:
             mv darwin/PreMiD-darwin-x64 PreMiD-darwin-x64
             mv win32/PreMiD-win32-ia32 PreMiD-win32-ia32
             mv win32/PreMiD-win32-x64 PreMiD-win32-x64
-            ls
-            rm -r win32.zip darwin.zip win32 darwin
+            rm -r win32.zip darwin.zip
+            node prepare.js PreMiD-win32-x64
+            /opt/installbuilder-19.9.0/bin/builder build installer.xml windows
+            node prepare.js PreMiD-win32-ia32
+            /opt/installbuilder-19.9.0/bin/builder build installer.xml windows
+            node prepare.js PreMiD-darwin-x64
+            /opt/installbuilder-19.9.0/bin/builder build installer.xml osx
