--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,6 +41,13 @@ jobs:
             mv win32/PreMiD-win32-ia32 PreMiD-win32-ia32
             mv win32/PreMiD-win32-x64 PreMiD-win32-x64
             rm -r win32.zip darwin.zip darwin win32
+      - name: Create installer
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SSHHOST }}
+          username: ${{ secrets.SSHUSERNAME }}
+          password: ${{ secrets.SSHPASSWORD }}
+          script: |
             node prepare.js PreMiD-win32-x64
             /opt/installbuilder-19.9.0/bin/builder build installer.xml windows
             node prepare.js PreMiD-win32-ia32
