--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,6 +51,8 @@ jobs:
             cd /home/PreMiD/builds
             node prepare.js PreMiD-win32-x64
             /opt/installbuilder-19.9.0/bin/builder build installer.xml windows
+            node prepare.js PreMiD-darwin-x64
+            /opt/installbuilder-19.9.0/bin/builder build installer.xml osx
 
 
             
