--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,7 @@ jobs:
             mv win32/PreMiD-win32-ia32 PreMiD-win32-ia32
             mv win32/PreMiD-win32-x64 PreMiD-win32-x64
             rm -r win32.zip darwin.zip darwin win32
-      - name: Create installer
+      - name: Create installer (Windows 32bit)
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SSHHOST }}
@@ -51,7 +51,7 @@ jobs:
             cd /home/PreMiD/builds
             node prepare.js PreMiD-win32-ia32
             /opt/installbuilder-19.9.0/bin/builder build installer.xml windows
-      - name: Create installer
+      - name: Create installer (Windows 64bit)
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SSHHOST }}
@@ -61,7 +61,7 @@ jobs:
             cd /home/PreMiD/builds
             node prepare.js PreMiD-win32-x64
             /opt/installbuilder-19.9.0/bin/builder build installer.xml windows
-      - name: Create installer
+      - name: Create installer (MacOS)
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SSHHOST }}
@@ -71,6 +71,13 @@ jobs:
             cd /home/PreMiD/builds
             node prepare.js PreMiD-darwin-x64
             /opt/installbuilder-19.9.0/bin/builder build installer.xml osx
-
+      - name: Cleanup
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SSHHOST }}
+          username: ${{ secrets.SSHUSERNAME }}
+          password: ${{ secrets.SSHPASSWORD }}
+          script: |
+            rm -r PreMiD-darwin-x64 PreMiD-win32-ia32 PreMiD-win32-x64
 
             
