--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "premid",
   "productName": "PreMiD",
   "description": "Discord Rich Presence for websites.",
-  "version": "2.0.5",
+  "version": "2.0.3",
   "repository": "https://github.com/PreMiD/PreMiD",
   "scripts": {
     "init": "tsc && tsc pkg devMode && node devMode.js compile",
@@ -15,12 +15,11 @@
   "devDependencies": {
     "@types/archiver": "3.0.0",
     "@types/auto-launch": "5.0.1",
-    "@types/chalk": "2.2.0",
     "@types/discord-rpc": "3.0.2",
     "@types/electron-packager": "14.0.0",
     "@types/fs-extra": "8.0.0",
     "@types/ini": "1.3.30",
-    "@types/ora": "3.2.0",
+    "@types/node": "^12.11.1",
     "@types/prompts": "2.0.1",
     "@types/request-promise-native": "1.0.17",
     "@types/rimraf": "^2.0.2",
