--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
     "@types/electron-packager": "14.0.0",
     "@types/fs-extra": "8.0.1",
     "@types/ini": "1.3.30",
-    "@types/node": "^12.11.1",
-    "@types/prompts": "2.0.1",
+    "@types/node": "^12.11.7",
+    "@types/prompts": "2.0.2",
     "@types/request-promise-native": "1.0.17",
-    "@types/rimraf": "^2.0.2",
+    "@types/rimraf": "2.0.3",
     "@types/socket.io": "2.1.4",
     "@types/ssh2-sftp-client": "4.1.0",
     "archiver": "3.1.1",
     "chalk": "2.4.2",
-    "electron": "6.0.12",
+    "electron": "^7.0.0",
     "electron-packager": "14.0.6",
     "fast-glob": "3.1.0",
     "fs-extra": "8.1.0",
