--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,8 @@ name: DePloY
 on:
   push:
     paths:
-    - 'src/**/*'
-    - '**.ts'
+      - "src/**/*"
+      - "**.ts"
 env:
   NODE_ENV: DePloY
 jobs:
@@ -16,17 +16,19 @@ jobs:
       - uses: actions/checkout@master
       - uses: actions/setup-node@master
       - name: Install Dependencies
-        run: npm i
+        run: npm i -g yarn
       - name: Prepare to package
-        run: npm run init
+        run: |
+          yarn
+          yarn run init
       - name: Package
-        run: npm run pkg
+        run: yarn pkg
       - name: Upload to server
         env:
           SSH_HOST: ${{ secrets.SSHHOST }}
           SSH_USERNAME: ${{ secrets.SSHUSERNAME }}
           SSH_PASSWORD: ${{ secrets.SSHPASSWORD }}
-        run: npm run deploy
+        run: yarn deploy
   installer:
     needs: package
     runs-on: "ubuntu-latest"
@@ -84,5 +86,3 @@ jobs:
           script: |
             cd /home/PreMiD/builds
             rm -r PreMiD-darwin-x64 PreMiD-win32-ia32 PreMiD-win32-x64
-
-            
