--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "init": "tsc && tsc pkg devMode && node devMode.js compile",
     "start": "electron dist/app/.",
     "dev": "node devMode.js",
-    "pkg": "rimraf dist && tsc && node devMode compile && cd dist/app/ && yarn && cd ../../",
+    "pkg": "rimraf dist && tsc && node devMode compile && cd dist/app/ && yarn && cd ../../ && node pkg",
     "deploy": "tsc .github/deploy && cd .github && node deploy.js"
   },
   "build": {
@@ -49,7 +49,7 @@
     "prompts": "2.2.1",
     "rimraf": "3.0.0",
     "source-map-support": "0.5.13",
-    "ssh2-sftp-client": "4.2.1",
+    "ssh2-sftp-client": "4.2.2",
     "typescript": "3.6.4",
     "yarn": "^1.19.1"
   },
