--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,73 +16,20 @@ jobs:
       - uses: actions/checkout@master
       - uses: actions/setup-node@master
       - name: Install Dependencies
-        run: npm i -g yarn
+        run: npm i
       - name: Prepare to package
-        run: |
-          yarn
-          yarn run init
+        run: npm run init
       - name: Package
-        run: yarn pkg
-      - name: Upload to server
-        env:
-          SSH_HOST: ${{ secrets.SSHHOST }}
-          SSH_USERNAME: ${{ secrets.SSHUSERNAME }}
-          SSH_PASSWORD: ${{ secrets.SSHPASSWORD }}
-        run: yarn deploy
+        run: npm run pkg
   installer:
     needs: package
     runs-on: "ubuntu-latest"
     steps:
-      - name: Prepare for installer
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SSHHOST }}
-          username: ${{ secrets.SSHUSERNAME }}
-          password: ${{ secrets.SSHPASSWORD }}
-          script: |
-            cd /home/PreMiD/builds
-            unzip darwin.zip
-            unzip win32.zip
-            mv darwin/PreMiD-darwin-x64 PreMiD-darwin-x64
-            mv win32/PreMiD-win32-ia32 PreMiD-win32-ia32
-            mv win32/PreMiD-win32-x64 PreMiD-win32-x64
-            rm -r win32.zip darwin.zip darwin win32
-      - name: Create installer (Windows 32bit)
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SSHHOST }}
-          username: ${{ secrets.SSHUSERNAME }}
-          password: ${{ secrets.SSHPASSWORD }}
-          script: |
-            cd /home/PreMiD/builds
-            node prepare.js PreMiD-win32-ia32
-            /opt/installbuilder-19.9.0/bin/builder build installer.xml windows
-      - name: Create installer (Windows 64bit)
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SSHHOST }}
-          username: ${{ secrets.SSHUSERNAME }}
-          password: ${{ secrets.SSHPASSWORD }}
-          script: |
-            cd /home/PreMiD/builds
-            node prepare.js PreMiD-win32-x64
-            /opt/installbuilder-19.9.0/bin/builder build installer.xml windows
-      - name: Create installer (MacOS)
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SSHHOST }}
-          username: ${{ secrets.SSHUSERNAME }}
-          password: ${{ secrets.SSHPASSWORD }}
-          script: |
-            cd /home/PreMiD/builds
-            node prepare.js PreMiD-darwin-x64
-            /opt/installbuilder-19.9.0/bin/builder build installer.xml osx
-      - name: Cleanup
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SSHHOST }}
-          username: ${{ secrets.SSHUSERNAME }}
-          password: ${{ secrets.SSHPASSWORD }}
-          script: |
-            cd /home/PreMiD/builds
-            rm -r PreMiD-darwin-x64 PreMiD-win32-ia32 PreMiD-win32-x64
+      - name: Download InstallBuilder
+        run: |
+          wget https://clients.bitrock.com/installbuilder/installbuilder-enterprise-19.10.0-linux-x64-installer.run
+          chmod u+x installbuilder-enterprise-19.10.0-linux-x64-installer.run
+      - name: Install InstallBuilder
+        run: |
+          ./installbuilder-enterprise-19.10.0-linux-x64-installer.run --installer-language en --prefix /root/installbuilder --mode unattended
+          echo "${{ secrets.IBLICENSE }}" > ./installbuilder/license.xml
