--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,11 +8,30 @@ on:
 env:
   NODE_ENV: DePloY
 jobs:
-  installer:
-    runs-on: "ubuntu-latest"
+  package:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [macOS-latest]
     steps:
       - uses: actions/checkout@master
       - uses: actions/setup-node@master
+      - name: Install Dependencies
+        run: npm i
+      - name: Prepare to package
+        run: npm run init
+      - name: Package
+        run: |
+          npm run pkg
+          rm -r dist/app
+      - uses: actions/upload-artifact@master
+        with:
+          name: ${{ matrix.os }}
+          path: dist
+  installer:
+    needs: package
+    runs-on: "ubuntu-latest"
+    steps:
       - name: InstallBuilder Cache
         id: installbuilder
         uses: actions/cache@v1.0.0
