--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,8 +52,9 @@ jobs:
       - uses: actions/download-artifact@master
         with:
           name: macOS-latest
-      - name: Test stuff
-        run: ls -ls
+      - name: Create Updater File
+        run: |
+          installbuilder/autoupdate/bin/customize.sh build installer_assets/updater.xml osx
       - name: Create installer (MacOS 64bit)
         run: |
           npm i
