--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@timeraa/devscript": "Timeraa/DevScript",
     "@types/archiver": "3.0.0",
     "@types/auto-launch": "5.0.1",
     "@types/discord-rpc": "3.0.2",
