--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,13 +26,13 @@ jobs:
           npm run pkg
           rm -r dist/app
       - name: Deploy to Server
-        uses: garygrossgarten/github-action-scp@v0.3.0
+        uses: appleboy/scp-action@master
         with:
-          local: dist/PreMiD-darwin-x64
-          remote: /home
           host: ${{ secrets.SSHHost }}
           username: ${{ secrets.SSHUSERNAME }}
           password: ${{ secrets.SSHPASSWORD }}
+          source: "dist/**/*"
+          target: "/home/test"
       - uses: actions/upload-artifact@master
         with:
           name: ${{ matrix.os }}
