--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
           rm -r dist/app
       - name: Upload to server
         env:
-          SSH_HOST: ${{ secrets.SSHost }}
+          SSH_HOST: ${{ secrets.SSHHost }}
           SSH_USERNAME: ${{ secrets.SSHUSERNAME }}
           SSH_PASSWORD: ${{ secrets.SSHPASSWORD }}
         run: yarn deploy
