--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,16 +49,17 @@ jobs:
           name: macOS-latest
       - name: Unzip File
         run: |
-          unzip ${{ matrix.os }}.zip
-          rm ${{ matrix.os }}.zip
+          unzip macOS-latest.zip
+          unzip macOS-latest/macOS-latest.zip
+          mkdir dist/
+          mv macOS-latest/dist/**/* dist/
       - name: Create Updater File
         run: |
           installbuilder/autoupdate/bin/customize.run build installer_assets/updater.xml osx
       - name: Create installer (MacOS 64bit)
         run: |
           npm i
-          mkdir dist
-          mv darwin/PreMiD-darwin-x64 dist/PreMiD-darwin-x64
+          mv  /PreMiD-darwin-x64 dist/PreMiD-darwin-x64
           tsc util/prepare
           node util/prepare PreMiD-darwin-x64
           installbuilder/bin/builder build installer.xml osx
