--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,9 @@ jobs:
       - name: Unzip File
         run: |
           unzip macOS-latest/macOS-latest.zip
+          ls -ls macOS-latest/
+          ls -ls macOS-latest/macOS-latest/
+          ls -ls macOS-latest/dist
           mv macOS-latest/dist/**/* dist/
       - name: Download InstallBuilder
         run: |
